// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > should render Brick 1`] = `
<div>
  <!---->
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="0"
    x2="5"
    y1="2.5"
    y2="2.5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="5"
    x2="10"
    y1="7.5"
    y2="7.5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="0"
    x2="0"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="10"
    x2="10"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="5"
    x2="5"
    y1="0"
    y2="10"
  />
  
  
</div>
`;

exports[`components > should render Checkerboard 1`] = `
<div>
  <rect
    fill="currentColor"
    height="5"
    width="5"
    x="0"
    y="0"
  />
  <rect
    fill="currentColor"
    height="5"
    width="5"
    x="5"
    y="5"
  />
  
</div>
`;

exports[`components > should render CircleGrid 1`] = `
<div>
  <circle
    cx="2.5"
    cy="2.5"
    fill="none"
    r="2"
    stroke="currentColor"
    stroke-width="0.6"
  />
  <circle
    cx="7.5"
    cy="7.5"
    fill="none"
    r="2"
    stroke="currentColor"
    stroke-width="0.6"
  />
  <circle
    cx="2.5"
    cy="7.5"
    fill="currentColor"
    r="2"
  />
  <circle
    cx="7.5"
    cy="2.5"
    fill="currentColor"
    r="2"
  />
  
</div>
`;

exports[`components > should render Circles 1`] = `
<div>
  <!---->
  <circle
    cx="5"
    cy="5"
    fill="currentColor"
    r="2"
    stroke="none"
  />
  <circle
    cx="0"
    cy="0"
    fill="currentColor"
    r="2"
    stroke="none"
  />
  <circle
    cx="10"
    cy="0"
    fill="currentColor"
    r="2"
    stroke="none"
  />
  <circle
    cx="0"
    cy="10"
    fill="currentColor"
    r="2"
    stroke="none"
  />
  <circle
    cx="10"
    cy="10"
    fill="currentColor"
    r="2"
    stroke="none"
  />
  
  
</div>
`;

exports[`components > should render CrossDot 1`] = `
<div>
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.6"
    x1="0"
    x2="10"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.6"
    x1="0"
    x2="10"
    y1="10"
    y2="0"
  />
  <circle
    cx="5"
    cy="5"
    fill="currentColor"
    r="2.2"
  />
  
</div>
`;

exports[`components > should render CrossHatch 1`] = `
<div>
  <!---->
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="0"
    x2="10"
    y1="2.5"
    y2="2.5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="0"
    x2="10"
    y1="5"
    y2="5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="0"
    x2="10"
    y1="7.5"
    y2="7.5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="2.5"
    x2="2.5"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="5"
    x2="5"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="7.5"
    x2="7.5"
    y1="0"
    y2="10"
  />
  
  
</div>
`;

exports[`components > should render CurvedWave 1`] = `
<div>
  <path
    d="M 0 3 A 6 5 0 0 0 10 3"
    fill="none"
    stroke="currentColor"
    stroke-width="0.5"
  />
  
</div>
`;

exports[`components > should render DiagonalLines 1`] = `
<div>
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="-5"
    x2="5"
    y1="5"
    y2="-5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="0"
    x2="10"
    y1="10"
    y2="0"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="5"
    x2="15"
    y1="15"
    y2="5"
  />
  
</div>
`;

exports[`components > should render DiamondOutline 1`] = `
<div>
  <rect
    fill="none"
    height="4"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.6"
    transform="rotate(45 5 5)"
    width="4"
    x="3"
    y="3"
  />
  
</div>
`;

exports[`components > should render Diamonds 1`] = `
<div>
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="0"
    x2="10"
    y1="10"
    y2="0"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="-5"
    x2="5"
    y1="5"
    y2="-5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="5"
    x2="15"
    y1="15"
    y2="5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="0"
    x2="10"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="-5"
    x2="5"
    y1="5"
    y2="15"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.8"
    x1="5"
    x2="15"
    y1="-5"
    y2="5"
  />
  
</div>
`;

exports[`components > should render Dots 1`] = `
<div>
  <!---->
  <circle
    cx="2"
    cy="2"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="4"
    cy="4"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="6"
    cy="6"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="8"
    cy="8"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="8"
    cy="2"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="6"
    cy="4"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="4"
    cy="6"
    fill="currentColor"
    r="0.8"
  />
  <circle
    cx="2"
    cy="8"
    fill="currentColor"
    r="0.8"
  />
  
  
</div>
`;

exports[`components > should render Hexagons 1`] = `
<div>
  <polygon
    fill="none"
    points="9.600000000000001,5 7.300000000000001,8.983716857408417 2.7000000000000006,8.983716857408417 0.39999999999999947,5.000000000000001 2.6999999999999975,1.0162831425915826 7.299999999999997,1.01628314259158"
    stroke="currentColor"
    stroke-linejoin="round"
    stroke-width="0.8"
  />
  
</div>
`;

exports[`components > should render HorizontalLines 1`] = `
<div>
  <line
    stroke="currentColor"
    stroke-width="0.8"
    x1="0"
    x2="10"
    y1="2.5"
    y2="2.5"
  />
  <line
    stroke="currentColor"
    stroke-width="0.8"
    x1="0"
    x2="10"
    y1="7.5"
    y2="7.5"
  />
  
</div>
`;

exports[`components > should render OutlineCircles 1`] = `
<div>
  <circle
    cx="5"
    cy="5"
    fill="none"
    r="3.8"
    stroke="currentColor"
    stroke-width="1.5"
  />
  
</div>
`;

exports[`components > should render ScatteredTriangles 1`] = `
<div>
  <polygon
    fill="currentColor"
    points="2.5,1.5 1.25,3.5 3.75,3.5"
  />
  <polygon
    fill="currentColor"
    points="6.25,6.5 8.75,6.5 7.5,8.5"
  />
  
</div>
`;

exports[`components > should render Tile 1`] = `
<div>
  <!---->
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="0"
    x2="10"
    y1="5"
    y2="5"
  />
  <line
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="0.5"
    x1="5"
    x2="5"
    y1="0"
    y2="10"
  />
  
  
</div>
`;

exports[`components > should render Triangles 1`] = `
<div>
  <!---->
  <polygon
    fill="currentColor"
    points="0, 5, 5, 10, 0, 10"
    stroke="currentColor"
    stroke-width="0"
  />
  <polygon
    fill="currentColor"
    points="5, 0, 0, 0, 0, 5"
    stroke="currentColor"
    stroke-width="0"
  />
  <polygon
    fill="currentColor"
    points="10, 0, 5, 5, 10, 10"
    stroke="currentColor"
    stroke-width="0"
  />
  
  
</div>
`;

exports[`components > should render VerticalLines 1`] = `
<div>
  <line
    stroke="currentColor"
    stroke-width="0.8"
    x1="2.5"
    x2="2.5"
    y1="0"
    y2="10"
  />
  <line
    stroke="currentColor"
    stroke-width="0.8"
    x1="7.5"
    x2="7.5"
    y1="0"
    y2="10"
  />
  
</div>
`;

exports[`components > should render Waves 1`] = `
<div>
  <path
    d="M 0 5 L 2.5 0 L 7.5 10 L 10 5"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="0.5"
  />
  
</div>
`;

exports[`components > should render Zigzag 1`] = `
<div>
  <path
    d="M 0 10 L 5 0 L 10 10"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="0.8"
  />
  
</div>
`;
